--- a/compose.yaml
+++ b/compose.yaml
@@ -7,3 +7,6 @@ services:
       - '8000:8000'
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+    
+  # also you can run with 
+  # docker run my-app:1.0 -d -p 8000:8000 -v /var/run/docker.sock:/var/run/docker.sock
